--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -7,4 +7,4 @@ main:
     url: /examples/
   - title: "GitHub"
     icon: "fab fa-fw fa-github"
-    url: https://github.com/ekkinox/yai
+    url: https://github.com/xsikor/yai
